<?xml version="1.0"?>
<package format="2">
  <name>analog_distance_sensor_to_laserscan</name>
  <version>0.0.0</version>
  <description>The analog_distance_sensor_to_laserscan package</description>

  <maintainer email="ikebe@todo.todo">ikebe</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>raspicat</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>raspicat</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>raspicat</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nodelet plugin="${prefix}/analog_distance_sensor_to_laserscan.xml"/>
  </export>
</package>
